Ingress_Part_3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service

spec:
  selector:
    app: mike-test
  ports:
  - port: 80
    targetPort: 5000
